Refactor model api
