# src/main/java/com/perficient/shoppingcart/infrastructure/mappers/CustomerApiModelMapper.java
@@ -1,6 +1,6 @@
 package com.perficient.shoppingcart.infrastructure.mappers;
 
-import com.perficient.shoppingcart.application.api.model.Customer;
+import com.perficient.shoppingcart.application.api.model.CustomerReq;
 import com.perficient.shoppingcart.domain.valueobjects.CustomerDomain;
 import com.perficient.shoppingcart.domain.valueobjects.CustomerIdDomain;
 
@@ -10,9 +10,9 @@ import java.util.Optional;
  * Convert to customer api model
  */
 public class CustomerApiModelMapper {
-    public static Customer convertFromDomain(CustomerDomain customerDomain) {
+    public static CustomerReq convertFromDomain(CustomerDomain customerDomain) {
         return Optional.ofNullable(customerDomain)
-                .map(domain -> new Customer()
+                .map(domain -> new CustomerReq()
                         .id(Optional.ofNullable(domain.getCustomerId())
                                 .map(CustomerIdDomain::getId)
                                 .orElse(null))
